2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

	* primitives/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* internals/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

2002-02-13  Neil Jerram  <neil@ossau.uklinux.net>

	* base.scm (load-emacs): Add optional parameters for specifying an
	alternative load path, and for debugging this.  (Thanks to
	Thien-Thi Nguyen!)

	* primitives/syntax.scm (setq): Use `set'.

	* internals/set.scm (set): Fixed to support variables that are
	imported from other modules.

2002-02-12  Neil Jerram  <neil@ossau.uklinux.net>

	* transform.scm (scheme): Use set-current-module to ensure
	expected behaviour of resolve-module.

2002-02-08  Neil Jerram  <neil@ossau.uklinux.net>

	* STATUS: New file.

	* README: Updated.

	* interface.scm (translate-elisp): New exported procedure.
	(elisp-function): Symbol var is `obj', not `symbol'.
	
	* internals/lambda.scm, primitives/fns.scm: Fix confusion between
	interactive-spec and interactive-specification.
	
	* internals/lambda.scm (transform-lambda), primitives/syntax.scm
	(defmacro): Bind unspecified optional and rest arguments to #nil,
	not #f.

	* internals/null.scm (->nil, lambda->nil): New, exported.
	(null): Use ->nil.

	* primitives/features.scm (featurep), primitives/fns.scm
	(fboundp, subrp): Use ->nil.

	* internals/lists.scm (cons, setcdr, memq, member, assq, assoc):
	Simplified.
	(car, cdr): Return #nil rather than #f.

	* primitives/load.scm (current-load-list), primitives/pure.scm
	(purify-flag): Set to #nil, not #f.

	* primitives/match.scm (string-match): Return #nil rather than #f.

	* primitives/numbers.scm (integerp, numberp),
	primitives/strings.scm (string-lessp, stringp): Use lambda->nil.

	* primitives/symprop.scm (boundp): Use ->nil.
	(symbolp, local-variable-if-set-p): Return #nil rather than #f.

	* primitives/syntax.scm (prog1, prog2): Mangle variable names